spacing fixed
Former-commit-id: 98ac29ceb3307b1e7efffe04d359e81efaedfe72 [formerly 938d39dcecc0613956722f14fa0548b8e53dce40]
Former-commit-id: bd06c32f3f1e389a98a1bb324d2d29039d6b7d35

--- a/src/styles/knowledgeQuest/Quiz.module.scss
+++ b/src/styles/knowledgeQuest/Quiz.module.scss
@@ -526,7 +526,7 @@ $qn-font-size: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 10px;
+    padding-top: 30px;
     .correctAnsArea {
       width: 100%;
       display: flex;
